--- a/Panel_part2.Rmd
+++ b/Panel_part2.Rmd
@@ -45,9 +45,7 @@ sessionInfo()
 
 * Fixed Effects Individual Slopes
 
-* Difference-in-Differences
-
-* Non-linear models
+* Dynamic treatment effects
 
 
 # Fixed Effects Individual Slopes (FEIS)
