--- a/docs/Panel.bib
+++ b/docs/Panel.bib
@@ -739,6 +739,16 @@
 }
 
 
+@article{Kratz.2021,
+ author = {Kratz, Fabian and Br{\"u}derl, Josef},
+ year = {2021},
+ title = {{The Age Trajectory of Happiness}},
+ url = {https://psyarxiv.com/d8f2z/},
+ journal = {{PsyArXiv}},
+ doi = {10.31234/osf.io/d8f2z}
+}
+
+
 @article{Krueger.2012,
  author = {Krueger, Alan B. and Mueller, Andreas I.},
  year = {2012},
@@ -901,8 +911,8 @@
  issn = {0003-1224},
  journal = {{American Sociological Review}},
  doi = {10.1177/0003122412471669},
- file = {https://www.ncbi.nlm.nih.gov/pmc/articles/PMC3870004},
- file = {http://www.ncbi.nlm.nih.gov/pubmed/24367134}
+ file = {http://www.ncbi.nlm.nih.gov/pubmed/24367134},
+ file = {https://www.ncbi.nlm.nih.gov/pmc/articles/PMC3870004}
 }
 
 
@@ -916,6 +926,18 @@
  issn = {0022-166X},
  journal = {{Journal of Human Resources}},
  doi = {10.3368/jhr.51.2.0414-6298R1}
+}
+
+
+@article{Millo.2017,
+ author = {Millo, Giovanni},
+ year = {2017},
+ title = {{Robust Standard Error Estimators for Panel Models: A Unifying Approach}},
+ volume = {82},
+ number = {3},
+ issn = {1548-7660},
+ journal = {{Journal of Statistical Software}},
+ doi = {10.18637/jss.v082.i03}
 }
 
 
