--- a/docs/Panel.bib
+++ b/docs/Panel.bib
@@ -229,6 +229,19 @@
 }
 
 
+@article{Callaway.2020,
+ author = {Callaway, Brantly and Sant'Anna, Pedro H.C.},
+ year = {2020},
+ title = {{Difference-in-Differences with multiple time periods}},
+ pages = {1},
+ volume = {72},
+ number = {5},
+ issn = {03044076},
+ journal = {{Journal of Econometrics}},
+ doi = {10.1016/j.jeconom.2020.12.001}
+}
+
+
 @article{Cameron.2008,
  author = {Cameron, A. Colin and Gelbach, Jonah B. and Miller, Douglas L.},
  year = {2008},
@@ -911,8 +924,8 @@
  issn = {0003-1224},
  journal = {{American Sociological Review}},
  doi = {10.1177/0003122412471669},
- file = {http://www.ncbi.nlm.nih.gov/pubmed/24367134},
- file = {https://www.ncbi.nlm.nih.gov/pmc/articles/PMC3870004}
+ file = {https://www.ncbi.nlm.nih.gov/pmc/articles/PMC3870004},
+ file = {http://www.ncbi.nlm.nih.gov/pubmed/24367134}
 }
 
 
