Add synthetic control

--- a/Panel.bib
+++ b/Panel.bib
@@ -1,5 +1,52 @@
 ﻿% This file was created with Citavi 6.2.0.12
 
+@article{Abadie.2003,
+ author = {Abadie, Alberto and Gardeazabal, Javier},
+ year = {2003},
+ title = {{The Economic Costs of Conflict: A Case Study of the Basque Country}},
+ pages = {113--132},
+ volume = {93},
+ number = {1},
+ issn = {0002-8282},
+ journal = {{American Economic Review}},
+ doi = {10.1257/000282803321455188}
+}
+
+
+@article{Abadie.2010,
+ author = {Abadie, Alberto and Diamond, Alexis and Hainmueller, Jens},
+ year = {2010},
+ title = {{Synthetic control methods for comparative case studies: Estimating the effect of California's tobacco control program}},
+ pages = {493--505},
+ volume = {105},
+ number = {490},
+ issn = {0162-1459},
+ journal = {{Journal of the American Statistical Association}},
+ doi = {10.1198/jasa.2009.ap08746}
+}
+
+
+@article{Abadie.2011,
+ author = {Abadie, Alberto and Diamond, Alexis and Hainmueller, Jens},
+ year = {2011},
+ title = {{Synth : An R Package for Synthetic Control Methods in Comparative Case Studies}},
+ volume = {42},
+ number = {13},
+ issn = {1548-7660},
+ journal = {{Journal of Statistical Software}},
+ doi = {10.18637/jss.v042.i13}
+}
+
+
+@article{Abadie.2021,
+ author = {Abadie, Alberto},
+ year = {2021},
+ title = {{Using synthetic controls: Feasibility, data requirements, and methodological Aspects}},
+ pages = {Forthcoming},
+ journal = {{Journal of Economic Literature}}
+}
+
+
 @article{Ahn.1996,
  author = {Ahn, Seung C. and Low, Stuart},
  year = {1996},
@@ -268,6 +315,19 @@
 }
 
 
+@article{Cattaneo.2021,
+ author = {Cattaneo, Matias D. and Feng, Yingjie and Titiunik, Rocio},
+ year = {2021},
+ title = {{Prediction Intervals for Synthetic Control Methods}},
+ pages = {1865--1880},
+ volume = {116},
+ number = {536},
+ issn = {0162-1459},
+ journal = {{Journal of the American Statistical Association}},
+ doi = {10.1080/01621459.2021.1979561}
+}
+
+
 @article{Chamberlain.1982,
  author = {Chamberlain, Gary},
  year = {1982},
@@ -278,6 +338,19 @@
  issn = {03044076},
  journal = {{Journal of Econometrics}},
  doi = {10.1016/0304-4076(82)90094-X}
+}
+
+
+@article{Chernozhukov.2021b,
+ author = {Chernozhukov, Victor and W{\"u}thrich, Kaspar and Zhu, Yinchu},
+ year = {2021},
+ title = {{An Exact and Robust Conformal Inference Method for Counterfactual and Synthetic Controls}},
+ pages = {1849--1864},
+ volume = {116},
+ number = {536},
+ issn = {0162-1459},
+ journal = {{Journal of the American Statistical Association}},
+ doi = {10.1080/01621459.2021.1920957}
 }
 
 
